--- a/04-CSS-Layouts/style.css
+++ b/04-CSS-Layouts/style.css
@@ -34,7 +34,7 @@ nav {
 nav a:link {
 	display: inline-block;
 	margin-right: 30px;
-	margin-top: 10px;
+	/* margin-top: 10px; */
 }
 
 nav a:link:last-child {
@@ -217,7 +217,7 @@ footer p {
 } */
 
 /* FLOATS */
-
+/* 
 .author-img {
 	float: left;
 	margin-bottom: 20px;
@@ -259,4 +259,61 @@ aside {
 
 footer {
 	clear: both;
+} */
+
+/* FLEX */
+
+.main-header {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.author {
+	margin-bottom: 0;
+}
+
+.author-box {
+	display: flex;
+	align-items: center;
+	gap: 10px;
+	margin-bottom: 15px;
+}
+
+.related-posts-item {
+	display: flex;
+	align-items: center;
+	gap: 20px;
+	margin-bottom: 30px;
+}
+
+.related-link:link {
+	font-size: 17px;
+	font-weight: bold;
+	font-style: normal;
+	display: block;
+	margin-bottom: 5px;
+}
+
+.related-author {
+	margin-bottom: 0;
+	font-size: 14px;
+	font-weight: normal;
+	font-style: italic;
+}
+
+.main-content {
+	display: flex;
+	gap: 75px;
+	margin-bottom: 60px;
+	align-items: flex-start;
+}
+
+article {
+	flex: 1;
+	margin-bottom: 0;
+}
+
+aside {
+	flex: 0 0 300px;
 }
