--- a/04-CSS-Layouts/style.css
+++ b/04-CSS-Layouts/style.css
@@ -19,7 +19,7 @@ body {
 .main-header {
 	background-color: #f7f7f7;
 	padding: 20px 40px;
-	margin-bottom: 60px;
+	/* margin-bottom: 60px; */
 	/* height: 80px; */
 }
 
@@ -42,7 +42,7 @@ nav a:link:last-child {
 }
 
 article {
-	margin-bottom: 60px;
+	/* margin-bottom: 60px; */
 }
 
 aside {
@@ -302,7 +302,8 @@ footer {
 	font-style: italic;
 }
 
-.main-content {
+/* flexbox layout */
+/* .main-content {
 	display: flex;
 	gap: 75px;
 	margin-bottom: 60px;
@@ -316,4 +317,31 @@ article {
 
 aside {
 	flex: 0 0 300px;
+} */
+
+/* grid layout */
+.container {
+	display: grid;
+	grid-template-columns: 1fr 300px;
+	column-gap: 75px;
+	row-gap: 60px;
+	align-items: start;
 }
+
+.main-header {
+	grid-column: 1 / -1;
+}
+
+/* article {
+
+}
+
+aside {
+
+} */
+
+footer {
+	background-color: #1098ad;
+	grid-column: 1 / -1;
+}
+
