--- a/07-Omnifood_v3/css/style.css
+++ b/07-Omnifood_v3/css/style.css
@@ -13,10 +13,17 @@ Default: 1
 
 --- 02 COLORS
 
-- Primary: #e67e22
-- Tints:#fdf2e9
-- Shades:#cf711f
+- Primary: 
+#e67e22
+
+- Tints: 
+#fdf2e9
+
+- Shades: 
+#cf711f
+
 - Accents:
+
 - Greys:
 #555
 #333
@@ -85,65 +92,53 @@ body {
     display: inline-block;
     text-decoration: none;
     font-size: 2rem;
-	font-weight: 600;
+    font-weight: 600;
     padding: 1.6rem 3.2rem;
     border-radius: 9px;
 
-	/* put transition on original state */
-	transition: background-color 0.3s;
+	transition: all 0.3s;
 }
 
 .btn--full:link,
 .btn--full:visited {
-	background-color: #e67e22;
-	color: #fff;
+    background-color: #e67e22;
+    color: #fff;
 }
 
 .btn--full:hover,
 .btn--full:active {
 	background-color: #cf711f;
-	color: #fff;
 }
 
 .btn--outline:link,
 .btn--outline:visited {
     background-color: #fff;
-	color: #555;
+    color: #333;
 }
 
 .btn--outline:hover,
 .btn--outline:active {
-    background-color: #fdf2e9;
-
-	/* Trick to add border inside */
+	background-color: #fdf2e9;
 	box-shadow: inset 0 0 0 3px #fff;
 }
 
-.hero-img {
-    width: 100%;
-}
-
-.margin-right-sm {
-	margin-right: 1.2rem !important;
-}
-
 .delivered-meals {
-	display: flex;
-	align-items: center;
-	gap: 1.6rem;
-	margin-top: 8rem;
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+    margin-top: 4.8rem;
 }
 
 .delivered-imgs {
-	display: flex;
+    display: flex;
 }
 
 .delivered-imgs img {
-	height: 4.8rem;
-	width: 4.8rem;
-	border-radius: 50%;
-	margin-right: -1.6rem;
-	border: 3px solid #fdf2e9;
+    width: 4.8rem;
+    height: 4.8rem;
+    border-radius: 50%;
+    margin-right: -1.6rem;
+    border: 3px solid #fff;
 }
 
 .delivered-imgs img:last-child {
@@ -151,11 +146,19 @@ body {
 }
 
 .delivered-text {
-	font-size: 1.8rem;
-	font-weight: 600;
+    font-size: 1.8rem;
+    font-weight: 600;
 }
 
 .delivered-text span {
-	color: #cf711f;
+    color: #cf711f;
 	font-weight: 700;
+}
+
+.hero-img {
+    width: 100%;
+}
+
+.margin-right-sm {
+    margin-right: 1.2rem !important;
 }
