--- a/07-Omnifood_v3/css/style.css
+++ b/07-Omnifood_v3/css/style.css
@@ -58,6 +58,121 @@ body {
     color: #555;
 }
 
+/* ******************** */
+/* GENERAL              */
+/* ******************** */
+
+.heading-primary {
+    font-size: 5.2rem;
+    font-weight: 700;
+    line-height: 1.05;
+    color: #333;
+    letter-spacing: -0.5px;
+    margin-bottom: 3.2rem;
+}
+
+.btn:link,
+.btn:visited {
+    display: inline-block;
+    text-decoration: none;
+    font-size: 2rem;
+    font-weight: 600;
+    padding: 1.6rem 3.2rem;
+    border-radius: 9px;
+
+    transition: all 0.3s;
+}
+
+.btn--full:link,
+.btn--full:visited {
+    background-color: #e67e22;
+    color: #fff;
+}
+
+.btn--full:hover,
+.btn--full:active {
+    background-color: #cf711f;
+}
+
+.btn--outline:link,
+.btn--outline:visited {
+    background-color: #fff;
+    color: #333;
+}
+
+.btn--outline:hover,
+.btn--outline:active {
+    background-color: #fdf2e9;
+    box-shadow: inset 0 0 0 3px #fff;
+}
+
+.margin-right-sm {
+    margin-right: 1.2rem !important;
+}
+
+/* ******************** */
+/* HEADER               */
+/* ******************** */
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fdf2e9;
+
+	/* the height is set because we will make it sticky */
+	height: 9.6rem;
+	padding: 0 4.8rem;
+}
+
+.logo {
+    height: 2.2rem;
+}
+
+/* ******************** */
+/* NAVIGATION           */
+/* ******************** */
+
+.main-nav-list {
+    list-style: none;
+    display: flex;
+	align-items: center;
+    gap: 3.2rem;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+	display: inline-block;
+    text-decoration: none;
+    font-size: 1.8rem;
+    color: #333;
+    font-weight: 500;
+
+	transition: all 0.3s;
+}
+
+.main-nav-link:active,
+.main-nav-link:hover {
+	color: #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+    background-color: #e67e22;
+    color: #fff;
+	padding: 1.2rem 2.4rem;
+    border-radius: 9px;
+}
+
+.main-nav-link.nav-cta:active,
+.main-nav-link.nav-cta:hover {
+	background-color: #cf711f;
+}
+
+/* ******************** */
+/* HERO                 */
+/* ******************** */
+
 .section-hero {
     background-color: #fdf2e9;
     padding: 9.6rem 0;
@@ -70,56 +185,13 @@ body {
     grid-template-columns: 1fr 1fr;
     gap: 9.6rem;
     align-items: center;
-}
-
-.heading-primary {
-    font-size: 5.2rem;
-    font-weight: 700;
-    line-height: 1.05;
-    color: #333;
-    letter-spacing: -0.5px;
-    margin-bottom: 3.2rem;
+	padding: 0 3.2rem;
 }
 
 .hero-description {
     font-size: 2rem;
     line-height: 1.6;
     margin-bottom: 4.8rem;
-}
-
-.btn:link,
-.btn:visited {
-    display: inline-block;
-    text-decoration: none;
-    font-size: 2rem;
-    font-weight: 600;
-    padding: 1.6rem 3.2rem;
-    border-radius: 9px;
-
-	transition: all 0.3s;
-}
-
-.btn--full:link,
-.btn--full:visited {
-    background-color: #e67e22;
-    color: #fff;
-}
-
-.btn--full:hover,
-.btn--full:active {
-	background-color: #cf711f;
-}
-
-.btn--outline:link,
-.btn--outline:visited {
-    background-color: #fff;
-    color: #333;
-}
-
-.btn--outline:hover,
-.btn--outline:active {
-	background-color: #fdf2e9;
-	box-shadow: inset 0 0 0 3px #fff;
 }
 
 .delivered-meals {
@@ -142,7 +214,7 @@ body {
 }
 
 .delivered-imgs img:last-child {
-	margin-right: 0;
+    margin-right: 0;
 }
 
 .delivered-text {
@@ -152,13 +224,9 @@ body {
 
 .delivered-text span {
     color: #cf711f;
-	font-weight: 700;
+    font-weight: 700;
 }
 
 .hero-img {
     width: 100%;
-}
-
-.margin-right-sm {
-    margin-right: 1.2rem !important;
 }
