--- a/07-Omnifood_v4/css/styles.css
+++ b/07-Omnifood_v4/css/styles.css
@@ -49,19 +49,9 @@ body {
 	color: #555;
 }
 
-.section-hero {
-	background-color: #fdf2e9;
-	padding: 9.6rem 0;
-}
-
-.hero {
-	max-width: 130rem;
-	margin: 0 auto;
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	gap: 9.6rem;
-	align-items: center;
-}
+/* ********** */
+/* GENERAL    */
+/* ********** */
 
 .heading-primary {
 	font-size: 5.2rem;
@@ -70,12 +60,6 @@ body {
 	line-height: 1.05;
 	letter-spacing: -0.5px;
 	margin-bottom: 3.2rem;
-}
-
-.hero-description {
-	font-size: 2rem;
-	line-height: 1.4;
-	margin-bottom: 4.8rem;
 }
 
 .btn:link, .btn:visited {
@@ -106,6 +90,90 @@ body {
 .btn--outline:hover, .btn--outline:active {
 	background-color: #fdf2e9;
 	box-shadow: inset 0 0 0 3px #fff;
+}
+
+.margin-right-ms {
+	margin-right: 1.2rem !important;
+}
+
+/* ********** */
+/* HEADER     */
+/* ********** */
+
+.header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	height: 9.6rem;
+	padding: 0 4.8rem;
+	background-color: #fdf2e9;
+}
+
+.logo {
+	height: 2.2rem;
+}
+
+/* ********** */
+/* NAVIGATION */
+/* ********** */
+
+.main-nav-list {
+	display: flex;
+	gap: 3.2rem;
+	align-items: center;
+	list-style: none;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+	text-decoration: none;
+	font-size: 2rem;
+	font-weight: 500;
+	color: #333;
+	transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+	color: #e67e22;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+	background-color: #e67e22;
+	color: #fff;
+	padding: 1.2rem 2.4rem;
+	border-radius: 9px;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+	background-color: #cf711f;
+}
+
+/* ********** */
+/* HERO     */
+/* ********** */
+
+.section-hero {
+	background-color: #fdf2e9;
+	padding: 9.6rem 0;
+}
+
+.hero {
+	max-width: 130rem;
+	margin: 0 auto;
+	padding: 0 3.2rem;
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 9.6rem;
+	align-items: center;
+}
+
+.hero-description {
+	font-size: 2rem;
+	line-height: 1.4;
+	margin-bottom: 4.8rem;
 }
 
 .delivered-meals {
@@ -145,6 +213,3 @@ body {
 	width: 100%;
 }
 
-.margin-right-ms {
-	margin-right: 1.2rem !important;
-}
