--- a/07-Omnifood_v5/css/styles.css
+++ b/07-Omnifood_v5/css/styles.css
@@ -33,116 +33,186 @@ Default: 1
 */
 
 * {
-	padding: 0;
-	margin: 0;
-	box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 html {
-	font-size: 62.5%;
+    font-size: 62.5%;
 }
 
 body {
-	font-family: "Rubik", sans-serif;
-	font-weight: 400;
-	color: #555;
-	line-height: 1;
+    font-family: "Rubik", sans-serif;
+    font-weight: 400;
+    color: #555;
+    line-height: 1;
 }
 
-.section-hero {
-	padding: 9.6rem 0;
-	background-color: #fdf2e9;
-}
-
-.hero {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	gap: 4.8rem;
-	max-width: 130rem;
-	margin: 0 auto;
-	align-items: center;
-}
+/* ********** */
+/* GENERAL    */
+/* ********** */
 
 .heading-primary {
-	font-size: 5.2rem;
-	margin-bottom: 4.8rem;
-	color: #333;
-	letter-spacing: -0.5px;
+    font-size: 5.2rem;
+    margin-bottom: 4.8rem;
+    color: #333;
+    letter-spacing: -0.5px;
 }
 
-.hero-description {
-	font-size: 2rem;
-	line-height: 1.6;
-	margin-bottom: 4.8rem;
+.btn:link,
+.btn:visited {
+    display: inline-block;
+    text-decoration: none;
+    padding: 1.6rem 3.2rem;
+    font-size: 2rem;
+    font-weight: 500;
+    border-radius: 9px;
+
+    transition: background-color 0.3s;
 }
 
-.btn:link, .btn:visited {
-	display: inline-block;
-	text-decoration: none;
-	padding: 1.6rem 3.2rem;
-	font-size: 2rem;
-	font-weight: 500;
-	border-radius: 9px;
-
-	transition: background-color 0.3s;
+.btn--full:link,
+.btn--full:visited {
+    background-color: #e67e22;
+    color: #fff;
 }
 
-.btn--full:link, .btn--full:visited {
-	background-color: #e67e22;
-	color: #fff;
+.btn--full:hover,
+.btn--full:active {
+    background-color: #cf711f;
 }
 
-.btn--full:hover, .btn--full:active {
-	background-color: #cf711f;
+.btn--outline:link,
+.btn--outline:visited {
+    background-color: #fff;
+    color: #555;
 }
 
-.btn--outline:link, .btn--outline:visited {
-	background-color: #fff;
-	color: #555;
-}
-
-.btn--outline:hover, .btn--outline:active {
-	background-color: #fdf2e9;
-	box-shadow: inset 0 0 0 3px #fff;
-}
-
-.delivered-meals {
-	display: flex;
-	align-items: center;
-	gap: 1.6rem;
-	margin-top: 8rem;
-}
-
-.delivered-imgs {
-	display: flex;
-}
-
-.delivered-imgs img {
-	width: 4.8rem;
-	height: 4.8rem;
-	border-radius: 50%;
-	margin-right: -1.6rem;
-	border: 3px solid #fff;
-}
-
-.delivered-imgs img:last-child {
-	margin-right: 0;
-}
-
-.delivered-text {
-	font-size: 2rem;
-	font-weight: 600;
-}
-
-.delivered-text span {
-	color: #cf711f;
-	font-weight: 700;
-}
-
-.hero-img {
-	width: 100%;
+.btn--outline:hover,
+.btn--outline:active {
+    background-color: #fdf2e9;
+    box-shadow: inset 0 0 0 3px #fff;
 }
 
 .margin-right-sm {
-	margin-right: 1.2rem;
+    margin-right: 1.2rem;
+}
+
+/* ********** */
+/* HEADER     */
+/* ********** */
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #fdf2e9;
+    height: 9.6rem;
+    padding: 0 4.8rem;
+}
+
+.logo {
+    height: 2.2rem;
+}
+
+/* ********** */
+/* NAVIGATION */
+/* ********** */
+
+.main-nav-list {
+    display: flex;
+    align-items: center;
+    gap: 3.2rem;
+    list-style: none;
+}
+
+.main-nav-link:link,
+.main-nav-link:visited {
+    display: inline-block;
+    text-decoration: none;
+    font-size: 1.8rem;
+    font-weight: 500;
+    color: #333;
+    transition: all 0.3s;
+}
+
+.main-nav-link:hover,
+.main-nav-link:active {
+    color: #cf711f;
+}
+
+.main-nav-link.nav-cta:link,
+.main-nav-link.nav-cta:visited {
+	background-color: #e67e22;
+	color: #fff;
+    padding: 1.2rem 2.4rem;
+    border-radius: 9px;
+}
+
+.main-nav-link.nav-cta:hover,
+.main-nav-link.nav-cta:active {
+	background-color: #cf711f;
+}
+
+/* ********** */
+/* HERO    */
+/* ********** */
+
+.section-hero {
+    padding: 9.6rem 0;
+    background-color: #fdf2e9;
+}
+
+.hero {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 4.8rem;
+    align-items: center;
+    max-width: 130rem;
+    margin: 0 auto;
+	padding: 0 3.2rem;
+}
+
+.hero-description {
+    font-size: 2rem;
+    line-height: 1.6;
+    margin-bottom: 4.8rem;
+}
+
+.delivered-meals {
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+    margin-top: 8rem;
+}
+
+.delivered-imgs {
+    display: flex;
+}
+
+.delivered-imgs img {
+    width: 4.8rem;
+    height: 4.8rem;
+    border-radius: 50%;
+    margin-right: -1.6rem;
+    border: 3px solid #fff;
+}
+
+.delivered-imgs img:last-child {
+    margin-right: 0;
+}
+
+.delivered-text {
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.delivered-text span {
+    color: #cf711f;
+    font-weight: 700;
+}
+
+.hero-img {
+    width: 100%;
 }
