--- a/07-Omnifood_v5/css/general.css
+++ b/07-Omnifood_v5/css/general.css
@@ -13,17 +13,10 @@ Default: 1
 
 --- 02 COLORS
 
-- Primary: 
-#e67e22
-
-- Tints: 
-#fdf2e9
-
-- Shades: 
-#cf711f
-
+- Primary: #e67e22
+- Tints:#fdf2e9
+- Shades:#cf711f
 - Accents:
-
 - Greys:
 #555
 #333
@@ -46,21 +39,19 @@ Default: 1
 }
 
 html {
-    /* 10px / 16px (browser font) = 0.625 = 62.5% */
-    /* percentage of user's browser font-size setting */
     font-size: 62.5%;
 }
 
 body {
     font-family: "Rubik", sans-serif;
-    line-height: 1;
     font-weight: 400;
     color: #555;
+    line-height: 1;
 }
 
-/* ******************** */
-/* GENERAL              */
-/* ******************** */
+/* ********** */
+/* GENERAL    */
+/* ********** */
 
 .heading-primary,
 .heading-secondary,
@@ -72,42 +63,40 @@ body {
 
 .heading-primary {
     font-size: 5.2rem;
-    line-height: 1.05;
-    margin-bottom: 3.2rem;
+    margin-bottom: 4.8rem;
+	line-height: 1.05;
 }
 
 .heading-secondary {
-	font-size: 4.4rem;
-	line-height: 1.2;
+	font-size: 3.6rem;
 	margin-bottom: 9.6rem;
 }
 
 .heading-tertiary {
-	font-size: 3rem;
+	font-size: 2.4rem;
 	margin-bottom: 3.2rem;
-	line-height: 1.2;
 }
 
 .subheading {
 	display: block;
 	font-size: 2rem;
 	font-weight: 500;
-	color: #e67e22;
+	letter-spacing: 0.75;
 	text-transform: uppercase;
-	margin-bottom: 1.6rem;
-	letter-spacing: 0.75;	
+	color: #e67e22;
+	margin-bottom: 2.4rem;
 }
 
 .btn:link,
 .btn:visited {
     display: inline-block;
     text-decoration: none;
-    font-size: 2rem;
-    font-weight: 600;
     padding: 1.6rem 3.2rem;
+    font-size: 2rem;
+    font-weight: 500;
     border-radius: 9px;
 
-    transition: all 0.3s;
+    transition: background-color 0.3s;
 }
 
 .btn--full:link,
@@ -124,7 +113,7 @@ body {
 .btn--outline:link,
 .btn--outline:visited {
     background-color: #fff;
-    color: #333;
+    color: #555;
 }
 
 .btn--outline:hover,
@@ -134,13 +123,7 @@ body {
 }
 
 .margin-right-sm {
-    margin-right: 1.2rem !important;
-}
-
-.container {
-	max-width: 120rem;
-	margin: 0 auto;
-	padding: 0 3.2rem;
+    margin-right: 1.2rem;
 }
 
 .grid {
@@ -163,4 +146,9 @@ body {
 
 .grid--center-v {
 	align-items: center;
+}
+
+.container {
+	max-width: 120rem;
+	margin: 0 auto;
 }
