--- a/07-Omnifood_v2/css/general.css
+++ b/07-Omnifood_v2/css/general.css
@@ -37,6 +37,7 @@ Paragraph default: 1.6
 
 --- 06 BORDER RADIUS
 default: 9px
+medium: 11px
 
 --- 07 WHITESPACE
 
@@ -142,7 +143,7 @@ body {
     border-radius: 9px;
 
     /* put transition on original state */
-    transition: background-color 0.3s;
+    transition: all 0.3s;
 }
 
 .btn--full:link,
@@ -170,6 +171,34 @@ body {
     box-shadow: inset 0 0 0 3px #fff;
 }
 
+.link:link,
+.link:visited {
+	display: inline-block;
+	color: #e67e22;
+	text-decoration: none;
+	border-bottom: 1px solid currentColor;
+	padding-bottom: 2px;
+	transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+	color: #cf711f;
+	border-bottom: 1px solid transparent
+}
+
 .margin-right-sm {
     margin-right: 1.2rem !important;
+}
+
+.margin-bottom-md {
+	margin-bottom: 4.8rem !important;
+}
+
+.center-text {
+	text-align: center;
+}
+
+strong {
+	font-weight: 500;
 }
