--- a/07-Omnifood_v3/css/style.css
+++ b/07-Omnifood_v3/css/style.css
@@ -120,6 +120,35 @@
 }
 
 /* ******************* */
+/* FEATURED IN         */
+/* ******************* */
+
+.section-featured {
+	padding: 4.8rem 0 3.2rem 0;
+}
+
+.heading-featured-in {
+	font-size: 1.4rem;
+	text-align: center;
+	letter-spacing: 0.75;
+	font-weight: 500;
+	color: #888;
+	text-transform: uppercase;
+	margin-bottom: 2.4rem;
+}
+
+.logos {
+	display: flex;
+	justify-content: space-around;
+}
+
+.logos img {
+	height: 3.2rem;
+	filter: brightness(0);
+	opacity: 50%;
+}
+
+/* ******************* */
 /* HOW IT WORKS        */
 /* ******************* */
 
