--- a/07-Omnifood_v3/css/style.css
+++ b/07-Omnifood_v3/css/style.css
@@ -8,9 +8,9 @@
     align-items: center;
     background-color: #fdf2e9;
 
-	/* the height is set because we will make it sticky */
-	height: 9.6rem;
-	padding: 0 4.8rem;
+    /* the height is set because we will make it sticky */
+    height: 9.6rem;
+    padding: 0 4.8rem;
 }
 
 .logo {
@@ -24,37 +24,37 @@
 .main-nav-list {
     list-style: none;
     display: flex;
-	align-items: center;
+    align-items: center;
     gap: 3.2rem;
 }
 
 .main-nav-link:link,
 .main-nav-link:visited {
-	display: inline-block;
+    display: inline-block;
     text-decoration: none;
     font-size: 1.8rem;
     color: #333;
     font-weight: 500;
 
-	transition: all 0.3s;
+    transition: all 0.3s;
 }
 
 .main-nav-link:active,
 .main-nav-link:hover {
-	color: #cf711f;
+    color: #cf711f;
 }
 
 .main-nav-link.nav-cta:link,
 .main-nav-link.nav-cta:visited {
     background-color: #e67e22;
     color: #fff;
-	padding: 1.2rem 2.4rem;
+    padding: 1.2rem 2.4rem;
     border-radius: 9px;
 }
 
 .main-nav-link.nav-cta:active,
 .main-nav-link.nav-cta:hover {
-	background-color: #cf711f;
+    background-color: #cf711f;
 }
 
 /* ******************** */
@@ -73,7 +73,7 @@
     grid-template-columns: 1fr 1fr;
     gap: 9.6rem;
     align-items: center;
-	padding: 0 3.2rem;
+    padding: 0 3.2rem;
 }
 
 .hero-description {
@@ -124,28 +124,28 @@
 /* ******************* */
 
 .section-featured {
-	padding: 4.8rem 0 3.2rem 0;
+    padding: 4.8rem 0 3.2rem 0;
 }
 
 .heading-featured-in {
-	font-size: 1.4rem;
-	text-align: center;
-	letter-spacing: 0.75;
-	font-weight: 500;
-	color: #888;
-	text-transform: uppercase;
-	margin-bottom: 2.4rem;
+    font-size: 1.4rem;
+    text-align: center;
+    letter-spacing: 0.75;
+    font-weight: 500;
+    color: #888;
+    text-transform: uppercase;
+    margin-bottom: 2.4rem;
 }
 
 .logos {
-	display: flex;
-	justify-content: space-around;
+    display: flex;
+    justify-content: space-around;
 }
 
 .logos img {
-	height: 3.2rem;
-	filter: brightness(0);
-	opacity: 50%;
+    height: 3.2rem;
+    filter: brightness(0);
+    opacity: 50%;
 }
 
 /* ******************* */
@@ -153,53 +153,161 @@
 /* ******************* */
 
 .section-how {
-	padding: 9.6rem;
+    padding: 9.6rem;
 }
 
 .step-number {
-	font-size: 8.6rem;
-	font-weight: 600;
-	color: #ddd;
-	margin-bottom: 1.2rem;
+    font-size: 8.6rem;
+    font-weight: 600;
+    color: #ddd;
+    margin-bottom: 1.2rem;
 }
 
 .step-description {
-	font-size: 1.8rem;
-	line-height: 1.8;
+    font-size: 1.8rem;
+    line-height: 1.8;
 }
 
 .step-img-box {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 
 .step-img-box::before,
 .step-img-box::after {
-	content: "";
-	display: block;
-	position: absolute;
-	border-radius: 50%;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+    content: "";
+    display: block;
+    position: absolute;
+    border-radius: 50%;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .step-img-box::before {
-	width: 60%;
-	padding-bottom: 60%;
-	background-color: #fdf2e9;
-	z-index: -2;
+    width: 60%;
+    padding-bottom: 60%;
+    background-color: #fdf2e9;
+    z-index: -2;
 }
 
 .step-img-box::after {
-	width: 45%;
-	padding-bottom: 45%;
-	background-color: #fae5d3;
-	z-index: -1;
+    width: 45%;
+    padding-bottom: 45%;
+    background-color: #fae5d3;
+    z-index: -1;
 }
 
 .step-img {
-	width: 35%;
+    width: 35%;
+}
+
+/* ******************* */
+/* MEALS SECTION       */
+/* ******************* */
+
+.section-meals {
+	padding: 9.6rem 0;
+}
+
+.meal {
+    box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+	border-radius: 11px;
+	overflow: hidden;
+	transition: all 0.4s;
+}
+
+.meal:hover {
+	transform: translateY(-1.2rem);
+	box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
+}
+
+.meal-img {
+    width: 100%;
+}
+
+.meal-content {
+    padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+}
+
+.meal-tags {
+    margin-bottom: 1.2rem;
+	display: flex;
+	gap: 0.4rem;
+}
+
+.tag {
+    display: inline-block;
+    font-size: 1.2rem;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding: 0.4rem 0.8rem;
+    border-radius: 100px;
+	color: #333;
+}
+
+.tag--vegetarian {
+    background-color: #51cf66;
+}
+
+.tag--vegan {
+    background-color: #94d82d;
+}
+
+.tag--paleo {
+    background-color: #ffd43b;
+}
+
+.meal-title {
+    font-size: 2.4rem;
+    font-weight: 600;
+	color: #333;
+    margin-bottom: 3.2rem;
+}
+
+.meal-attributes {
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.meal-attribute {
+    font-size: 1.8rem;
+	display: flex;
+	align-items: center;
+	gap: 1.6rem;
+}
+
+.meal-icon {
+	color: #e67e22;
+	width: 2.4rem;
+	height: 2.4rem;
+}
+
+.list {
+	list-style: none;
+	display: flex;
+	flex-direction: column;
+	gap: 1.6rem;
+}
+
+.list-item {
+	font-size: 1.8rem;
+	display: flex;
+	align-items: center;
+	gap: 1.6rem;
+}
+
+.list-icon {
+	width: 3rem;
+	height: 3rem;
+	color: #e67e22;
+}
+
+.all-recipes {
+	text-align: center;
+	font-size: 1.8rem;
 }
