--- a/07-Omnifood_v3/css/general.css
+++ b/07-Omnifood_v3/css/general.css
@@ -133,8 +133,28 @@ body {
     box-shadow: inset 0 0 0 3px #fff;
 }
 
+.link:link,
+.link:visited {
+	display: inline-block;
+	text-decoration: none;
+	color: #e67e22;
+	border-bottom: 1px solid currentColor;
+	padding-bottom: 2px;
+	transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+	color: #cf711f;
+	border-bottom: 1px solid transparent;
+}
+
 .margin-right-sm {
     margin-right: 1.2rem !important;
+}
+
+.margin-bottom-md {
+	margin-bottom: 4.8rem !important;
 }
 
 .container {
@@ -163,4 +183,12 @@ body {
 
 .grid--center-v {
 	align-items: center;
+}
+
+.center-text {
+	text-align: center;
+}
+
+strong {
+	font-weight: 500;
 }
