--- a/07-Omnifood_v4/css/styles.css
+++ b/07-Omnifood_v4/css/styles.css
@@ -54,7 +54,7 @@
 }
 
 /* ********** */
-/* HERO     */
+/* HERO       */
 /* ********** */
 
 .section-hero {
@@ -169,4 +169,142 @@
 
 .step-img {
 	width: 35%;
+}
+
+/* ************ */
+/* FEATURED IN  */
+/* ************ */
+
+.section-featured {
+	padding: 4.8rem 0;
+}
+
+.heading-featured-in {
+	text-align: center;
+	font-size: 1.6rem;
+	text-transform: uppercase;
+	color: #888;
+	letter-spacing: 1.5px;
+	margin-bottom: 2.4rem;
+}
+
+.logos {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	gap: 2rem;
+}
+
+.logos img {
+	height: 3.2rem;
+	filter: brightness(0);
+	opacity: 0.5;
+}
+
+/* ************ */
+/* MEALS        */
+/* ************ */
+
+.meals {
+	padding: 9.6rem 0;
+}
+
+.meal {
+	box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+	border-radius: 11px;
+	overflow: hidden;
+	transition: all 0.4s;
+}
+
+.meal:hover {
+	transform: translateY(-2rem);
+	box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
+}
+
+.meal-img {
+	width: 100%;
+}
+
+.meal-content {
+	padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+}
+
+.meal-tags {
+	display: flex;
+	align-items: center;
+	gap: 0.6rem;
+	margin-bottom: 1rem;
+}
+
+.tag {
+	display: inline-block;
+	font-size: 1.2rem;
+	font-weight: 500;
+	text-transform: uppercase;
+	background-color: aquamarine;
+	padding: 0.4rem 0.8rem;
+	border-radius: 100px;
+}
+
+.tag--vegetarian {
+    background-color: #51cf66;
+}
+
+.tag--vegan {
+    background-color: #94d82d;
+}
+
+.tag--paleo {
+    background-color: #ffd43b;
+}
+
+.meal-title {
+	font-size: 2rem;
+	font-weight: 600;
+	color: #333;
+	margin-bottom: 2.4rem;
+}
+
+.meal-attributes {
+	list-style: none;
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+}
+
+.meal-attribute {
+	font-size: 1.8rem;
+	display: flex;
+	align-items: center;
+	gap: 1.2rem;
+}
+
+.meal-icon {
+	height: 2.4rem;
+	width: 2.4rem;
+	color: #e67e22;
+}
+
+.list {
+	display: flex;
+	flex-direction: column;
+	gap: 1.6rem;
+	list-style: none;
+}
+
+.list-item {
+	display: flex;
+	align-items: center;
+	gap: 1.2rem;
+	font-size: 1.8rem;
+}
+
+.list-icon {
+	color: #e67e22;
+	height: 3rem;
+	width: 3rem;
+}
+
+.all-recipes {
+	text-align: center;
 }
