--- a/07-Omnifood_v5/css/general.css
+++ b/07-Omnifood_v5/css/general.css
@@ -53,6 +53,10 @@ body {
 /* GENERAL    */
 /* ********** */
 
+strong {
+	font-weight: 500;
+}
+
 .heading-primary,
 .heading-secondary,
 .heading-tertiary {
@@ -122,8 +126,32 @@ body {
     box-shadow: inset 0 0 0 3px #fff;
 }
 
+.link:link,
+.link:visited {
+	text-decoration: none;
+	font-size: 2rem;
+	color: #e67e22;
+	border-bottom: 1px solid currentColor;
+	padding-bottom: 0.6rem;
+	transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+	color: #cf711f;
+	border-bottom: 1px solid transparent;
+}
+
 .margin-right-sm {
-    margin-right: 1.2rem;
+    margin-right: 1.2rem !important;
+}
+
+.margin-bottom-md {
+	margin-bottom: 4.8rem !important;
+}
+
+.center-text {
+	text-align: center;
 }
 
 .grid {
