--- a/07-Omnifood_v5/css/styles.css
+++ b/07-Omnifood_v5/css/styles.css
@@ -117,6 +117,37 @@
 }
 
 /* ******************* */
+/* SECTION-FEATURED    */
+/* ******************* */
+
+.section-featured {
+	padding: 4.8rem 0;
+}
+
+.heading-featured-in {
+	font-size: 1.4rem;
+	font-weight: 500;
+	color: #888;
+	text-transform: uppercase;
+	text-align: center;
+	letter-spacing: 1.5px;
+	margin-bottom: 2rem;
+}
+
+.logos {
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	gap: 1.4rem;
+}
+
+.logos img {
+	height: 3.2rem;
+	filter: brightness(0);
+	opacity: 0.5;
+}
+
+/* ******************* */
 /* HOW IT WORKS        */
 /* ******************* */
 
@@ -171,3 +202,112 @@
 .step-img {
 	width: 35%;
 }
+
+/* ******************* */
+/* MEALS               */
+/* ******************* */
+
+.section-meals {
+	padding: 9.6rem 0;
+}
+
+.meal {
+	box-shadow: 0 2.4rem 4.8rem rgba(0,0,0, 0.075);
+	border-radius: 11px;
+	overflow: hidden;
+	transition: all 0.3s;
+}
+
+.meal:hover {
+	transform: translateY(-2rem);
+	box-shadow: 0 3.2rem 6.4rem rgba(0,0,0, 0.06);
+}
+
+.meal-content {
+	padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+}
+
+.meal-img {
+	width: 100%;
+}
+
+.meal-tags {
+	display: flex;
+	align-items: center;
+	gap: 0.4rem;
+	margin-bottom: 1.2rem;
+}
+
+.tag {
+	display: inline-block;
+	font-size: 1.1rem;
+	font-weight: 500;
+	text-transform: uppercase;
+	background-color: chartreuse;
+	padding: 0.4rem 0.8rem;
+	border-radius: 100px;
+}
+
+.tag--vegetarian {
+    background-color: #51cf66;
+}
+
+.tag--vegan {
+    background-color: #94d82d;
+}
+
+.tag--paleo {
+    background-color: #ffd43b;
+}
+
+.meal-title {
+	font-size: 2rem;
+	font-weight: 600;
+	color: #333;
+	margin-bottom: 2.4rem;
+}
+
+.meal-attributes {
+	list-style: none;
+	display: flex;
+	flex-direction: column;
+	gap: 2rem;
+}
+
+.meal-attribute {
+	font-size: 1.8rem;
+	display: flex;
+	align-items: center;
+	gap: 1.4rem;
+}
+
+.meal-icon {
+	height: 2.4rem;
+	width: 2.4rem;
+	color: #e67e22;
+}
+
+.list {
+	list-style: none;
+	display: flex;
+	flex-direction: column;
+	gap: 1.8rem;
+}
+
+.list-item {
+	font-size: 2rem;
+	display: flex;
+	align-items: center;
+	gap: 1.2rem;
+}
+
+.list-icon {
+	height: 3rem;
+	width: 3rem;
+	color: #e67e22;
+}
+
+.all-recipes {
+	text-align: center;
+}
+
