--- a/07-Omnifood_v3/css/style.css
+++ b/07-Omnifood_v3/css/style.css
@@ -311,3 +311,62 @@
 	text-align: center;
 	font-size: 1.8rem;
 }
+
+/* ******************* */
+/* TESTIMONIALS        */
+/* ******************* */
+
+.section-testimonials {
+	display: grid;
+	grid-template-columns: 55fr 45fr;
+	background-color: #fdf2e9;
+	align-items: center;
+}
+
+.testimonials-container {
+	padding: 9.6rem;
+}
+
+.testimonials {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	row-gap: 4.8rem;
+	column-gap: 6.4rem;
+}
+
+.testimonial-img {
+	width: 6.4rem;
+	border-radius: 50%;
+	margin-bottom: 1rem;
+}
+
+.testimonial-text {
+	font-size: 1.8rem;
+	line-height: 2;
+	margin-bottom: 1.4rem;
+}
+
+.testimonial-name {
+	font-size: 1.6rem;
+}
+
+.gallery {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 1.4rem;
+	padding: 2rem;
+}
+
+.gallery-item {
+	overflow: hidden;
+}
+
+.gallery img {
+	width: 100%;
+	display: block;
+	transition: all 0.4s;
+}
+
+.gallery img:hover {
+	transform: scale(1.2);
+}
