--- a/07-Omnifood_v3/css/style.css
+++ b/07-Omnifood_v3/css/style.css
@@ -331,30 +331,31 @@
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	row-gap: 4.8rem;
-	column-gap: 6.4rem;
+	column-gap: 8rem;
 }
 
 .testimonial-img {
 	width: 6.4rem;
 	border-radius: 50%;
-	margin-bottom: 1rem;
+	margin-bottom: 1.2rem;
 }
 
 .testimonial-text {
 	font-size: 1.8rem;
-	line-height: 2;
-	margin-bottom: 1.4rem;
+	line-height: 1.8;
+	margin-bottom: 1.6rem;
 }
 
 .testimonial-name {
 	font-size: 1.6rem;
+	color: #6f6f6f;
 }
 
 .gallery {
 	display: grid;
 	grid-template-columns: repeat(3, 1fr);
-	gap: 1.4rem;
-	padding: 2rem;
+	gap: 1.6rem;
+	padding: 1.6rem;
 }
 
 .gallery-item {
