--- a/07-Omnifood_v4/css/styles.css
+++ b/07-Omnifood_v4/css/styles.css
@@ -308,3 +308,63 @@
 .all-recipes {
 	text-align: center;
 }
+
+/* ************ */
+/* MEALS        */
+/* ************ */
+
+.section-testimonials {
+	background-color: #fdf2e9;
+	display: grid;
+	grid-template-columns: 55fr 45fr;
+	align-items: center;
+}
+
+.testimonials-container {
+	padding: 9.6rem;
+}
+
+.testimonials {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	row-gap: 6.4rem;
+	column-gap: 8rem;
+}
+
+.testimonial-img {
+	width: 6.4rem;
+	border-radius: 50%;
+	margin-bottom: 1rem;
+}
+
+.testimonial-text {
+	font-size: 1.8rem;
+	line-height: 2;
+	margin-bottom: 1.8rem;
+}
+
+.testimonial-name {
+	font-size: 1.6rem;
+	color: #6f6f6f;
+}
+
+.gallery {
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 1.8rem;
+	padding: 1.8rem;
+}
+
+.gallery-item {
+	overflow: hidden;
+}
+
+.gallery img {
+	width: 100%;
+	display: block;
+	transition: all 0.4s;
+}
+
+.gallery img:hover {
+	transform: scale(1.2);
+}
