--- a/07-Omnifood_v2/css/general.css
+++ b/07-Omnifood_v2/css/general.css
@@ -27,14 +27,20 @@ Paragraph default: 1.6
 - Tints:
 #fdf2e9
 #fae5d3
-- Shades:#cf711f
+#eb984e
+- Shades:
+#cf711f
+#45260a
 - Accents:
 - Greys:
+#888
+#767676 (lightest gray allowed on #fff)
 #6f6f6f (lightest gray allowed on #fdf2e9)
 #555
 #333
 
 --- 05 SHADOWS
+box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
 
 --- 06 BORDER RADIUS
 default: 9px
@@ -108,6 +114,10 @@ body {
 	grid-template-columns: repeat(4, 1fr);
 }
 
+.grid--5-cols {
+	grid-template-columns: repeat(5, 1fr);
+}
+
 .heading-primary,
 .heading-secondary,
 .heading-tertiary {
@@ -144,6 +154,7 @@ body {
 	letter-spacing: 0.75px;
 }
 
+.btn,
 .btn:link,
 .btn:visited {
     display: inline-block;
@@ -152,6 +163,11 @@ body {
     font-weight: 600;
     padding: 1.6rem 3.2rem;
     border-radius: 9px;
+
+	/* only for button element */
+	border: none;
+	cursor: pointer;
+	font-family: inherit;
 
     /* put transition on original state */
     transition: all 0.3s;
@@ -180,6 +196,18 @@ body {
 
     /* Trick to add border inside */
     box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn--form {
+	background-color: #45260a;
+	color: #fdf2e9;
+	align-self: end;
+	padding: 1.2rem;
+}
+
+.btn--form:hover {
+	background-color: #fff;
+	color: #555;
 }
 
 .link:link,
@@ -216,6 +244,11 @@ body {
 	width: 3rem;
 	height: 3rem;
 	color: #e67e22;
+}
+
+*:focus {
+	outline: none;
+	box-shadow: 0 0 0 0.8rem rgba(230, 125, 34, 0.5);
 }
 
 .margin-right-sm {
