--- a/07-Omnifood_v3/css/style.css
+++ b/07-Omnifood_v3/css/style.css
@@ -209,19 +209,19 @@
 /* ******************* */
 
 .section-meals {
-	padding: 9.6rem 0;
+    padding: 9.6rem 0;
 }
 
 .meal {
     box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
-	border-radius: 11px;
-	overflow: hidden;
-	transition: all 0.4s;
+    border-radius: 11px;
+    overflow: hidden;
+    transition: all 0.4s;
 }
 
 .meal:hover {
-	transform: translateY(-1.2rem);
-	box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
+    transform: translateY(-1.2rem);
+    box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
 }
 
 .meal-img {
@@ -234,8 +234,8 @@
 
 .meal-tags {
     margin-bottom: 1.2rem;
-	display: flex;
-	gap: 0.4rem;
+    display: flex;
+    gap: 0.4rem;
 }
 
 .tag {
@@ -245,7 +245,7 @@
     text-transform: uppercase;
     padding: 0.4rem 0.8rem;
     border-radius: 100px;
-	color: #333;
+    color: #333;
 }
 
 .tag--vegetarian {
@@ -263,7 +263,7 @@
 .meal-title {
     font-size: 2.4rem;
     font-weight: 600;
-	color: #333;
+    color: #333;
     margin-bottom: 3.2rem;
 }
 
@@ -276,40 +276,40 @@
 
 .meal-attribute {
     font-size: 1.8rem;
-	display: flex;
-	align-items: center;
-	gap: 1.6rem;
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
 }
 
 .meal-icon {
-	color: #e67e22;
-	width: 2.4rem;
-	height: 2.4rem;
+    color: #e67e22;
+    width: 2.4rem;
+    height: 2.4rem;
 }
 
 .list {
-	list-style: none;
-	display: flex;
-	flex-direction: column;
-	gap: 1.6rem;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
 }
 
 .list-item {
-	font-size: 1.8rem;
-	display: flex;
-	align-items: center;
-	gap: 1.6rem;
+    font-size: 1.8rem;
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
 }
 
 .list-icon {
-	width: 3rem;
-	height: 3rem;
-	color: #e67e22;
+    width: 3rem;
+    height: 3rem;
+    color: #e67e22;
 }
 
 .all-recipes {
-	text-align: center;
-	font-size: 1.8rem;
+    text-align: center;
+    font-size: 1.8rem;
 }
 
 /* ******************* */
@@ -317,59 +317,59 @@
 /* ******************* */
 
 .section-testimonials {
-	display: grid;
-	grid-template-columns: 55fr 45fr;
-	background-color: #fdf2e9;
-	align-items: center;
+    display: grid;
+    grid-template-columns: 55fr 45fr;
+    background-color: #fdf2e9;
+    align-items: center;
 }
 
 .testimonials-container {
-	padding: 9.6rem;
+    padding: 9.6rem;
 }
 
 .testimonials {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	row-gap: 4.8rem;
-	column-gap: 8rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 4.8rem;
+    column-gap: 8rem;
 }
 
 .testimonial-img {
-	width: 6.4rem;
-	border-radius: 50%;
-	margin-bottom: 1.2rem;
+    width: 6.4rem;
+    border-radius: 50%;
+    margin-bottom: 1.2rem;
 }
 
 .testimonial-text {
-	font-size: 1.8rem;
-	line-height: 1.8;
-	margin-bottom: 1.6rem;
+    font-size: 1.8rem;
+    line-height: 1.8;
+    margin-bottom: 1.6rem;
 }
 
 .testimonial-name {
-	font-size: 1.6rem;
-	color: #6f6f6f;
+    font-size: 1.6rem;
+    color: #6f6f6f;
 }
 
 .gallery {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	gap: 1.6rem;
-	padding: 1.6rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.6rem;
+    padding: 1.6rem;
 }
 
 .gallery-item {
-	overflow: hidden;
+    overflow: hidden;
 }
 
 .gallery img {
-	width: 100%;
-	display: block;
-	transition: all 0.4s;
+    width: 100%;
+    display: block;
+    transition: all 0.4s;
 }
 
 .gallery img:hover {
-	transform: scale(1.2);
+    transform: scale(1.2);
 }
 
 /* ******************* */
@@ -377,103 +377,179 @@
 /* ******************* */
 
 .section-pricing {
-	padding: 9.6rem 0;
+    padding: 9.6rem 0;
 }
 
 .pricing-plans {
-	border-radius: 11px;
-	width: 75%;
-	padding: 4.6rem;
+    border-radius: 11px;
+    width: 75%;
+    padding: 4.6rem;
 }
 
 .pricing-plan--starter {
-	justify-self: end;
-	border: 1px solid #fdf2e9;
+    justify-self: end;
+    border: 1px solid #fdf2e9;
 }
 
 .pricing-plan--complete {
-	background-color: #fdf2e9;
-	position: relative;
-	overflow: hidden;
+    background-color: #fdf2e9;
+    position: relative;
+    overflow: hidden;
 }
 
 .pricing-plan--complete::after {
-	content: "BEST VALUE";
-	position: absolute;
-	top: 5%;
-	right: -8%;
-	font-size: 1.4rem;
-	text-transform: uppercase;
-	font-weight: 700;
-	background-color: #ffd43b;
-	padding: 0.8rem 3.2rem;
-	transform: rotate(45deg);
+    content: "BEST VALUE";
+    position: absolute;
+    top: 5%;
+    right: -8%;
+    font-size: 1.4rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    background-color: #ffd43b;
+    padding: 0.8rem 3.2rem;
+    transform: rotate(45deg);
 }
 
 .plan-header {
-	text-align: center;
-	margin-bottom: 4.8rem;
+    text-align: center;
+    margin-bottom: 4.8rem;
 }
 
 .plan-name {
-	font-size: 2rem;
-	font-weight: 600;
-	color: #cf711f;
-	text-transform: uppercase;
-	letter-spacing: 0.75;
-	margin-bottom: 3.2rem;
+    font-size: 2rem;
+    font-weight: 600;
+    color: #cf711f;
+    text-transform: uppercase;
+    letter-spacing: 0.75;
+    margin-bottom: 3.2rem;
 }
 
 .plan-price {
-	font-size: 6.2rem;
-	font-weight: 600;
-	color: #333;
-	margin-bottom: 2rem;
+    font-size: 6.2rem;
+    font-weight: 600;
+    color: #333;
+    margin-bottom: 2rem;
 }
 
 .plan-price span {
-	font-size: 3rem;
-	font-weight: 500;
-	margin-right: 0.8rem;
+    font-size: 3rem;
+    font-weight: 500;
+    margin-right: 0.8rem;
 }
 
 .plan-text {
-	font-size: 1.6rem;
-	color: #6f6f6f;
+    font-size: 1.6rem;
+    color: #6f6f6f;
 }
 
 .list {
-	margin-bottom: 4.8rem;
+    margin-bottom: 4.8rem;
 }
 
 .plan-signup {
-	text-align: center;
+    text-align: center;
 }
 
 .plan-details {
-	text-align: center;
-	font-size: 1.6rem;
-	font-weight: 400;
+    text-align: center;
+    font-size: 1.6rem;
+    font-weight: 400;
 }
 
 .feature-icon {
-	height: 3.2rem;
-	width: 3.2rem;
-	color: #e67e22;
-	background-color: #fdf2e9;
-	padding: 1.6rem;
-	border-radius: 50%;
-	margin-bottom: 3.2rem;
+    height: 3.2rem;
+    width: 3.2rem;
+    color: #e67e22;
+    background-color: #fdf2e9;
+    padding: 1.6rem;
+    border-radius: 50%;
+    margin-bottom: 3.2rem;
 }
 
 .feature-title {
-	font-size: 2.4rem;
-	font-weight: 700;
-	margin-bottom: 1.6rem;
-	color: #333;
+    font-size: 2.4rem;
+    font-weight: 700;
+    margin-bottom: 1.6rem;
+    color: #333;
 }
 
 .feature-text {
-	font-size: 1.8rem;
-	line-height: 1.8;
+    font-size: 1.8rem;
+    line-height: 1.8;
+}
+
+/* ******************* */
+/* CTA	               */
+/* ******************* */
+
+.section-cta {
+    padding: 9.6rem 0;
+}
+
+.cta {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    background-color: #e67e22;
+    box-shadow: 0 2.4px 4.8px rgba(0, 0, 0, 0.25);
+    border-radius: 11px;
+    overflow: hidden;
+    background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
+}
+
+.cta-text-box {
+    padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+    color: #45260a;
+}
+
+.cta .heading-secondary {
+    margin-bottom: 2.4rem;
+    color: #45260a;
+}
+
+.cta-text {
+    font-size: 1.8rem;
+    line-height: 1.8;
+    margin-bottom: 4.8rem;
+}
+
+.cta-form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 3.2rem;
+    row-gap: 2.4rem;
+}
+
+.cta-form label {
+    display: block;
+    font-size: 1.6rem;
+    font-weight: 500;
+    margin-bottom: 1.2rem;
+}
+
+.cta-form input,
+.cta-form select {
+    width: 100%;
+    padding: 1.2rem;
+    font-size: 1.8rem;
+    font-family: inherit;
+    color: inherit;
+    border: none;
+    border-radius: 9px;
+    background-color: #fdf2e9;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.cta-form input::placeholder {
+    color: #aaa;
+}
+
+.cta-img-box {
+    background-image: linear-gradient(
+            to right bottom,
+            rgba(235, 151, 78, 0.35),
+            rgba(230, 125, 34, 0.35)
+        ),
+        url("../img/eating.jpg");
+    background-size: cover;
+    background-position: center;
 }
