--- a/07-Omnifood_v4/css/styles.css
+++ b/07-Omnifood_v4/css/styles.css
@@ -3,16 +3,16 @@
 /* ********** */
 
 .header {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	height: 9.6rem;
-	padding: 0 4.8rem;
-	background-color: #fdf2e9;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 9.6rem;
+    padding: 0 4.8rem;
+    background-color: #fdf2e9;
 }
 
 .logo {
-	height: 2.2rem;
+    height: 2.2rem;
 }
 
 /* ********** */
@@ -20,37 +20,37 @@
 /* ********** */
 
 .main-nav-list {
-	display: flex;
-	gap: 3.2rem;
-	align-items: center;
-	list-style: none;
+    display: flex;
+    gap: 3.2rem;
+    align-items: center;
+    list-style: none;
 }
 
 .main-nav-link:link,
 .main-nav-link:visited {
-	text-decoration: none;
-	font-size: 2rem;
-	font-weight: 500;
-	color: #333;
-	transition: all 0.3s;
+    text-decoration: none;
+    font-size: 2rem;
+    font-weight: 500;
+    color: #333;
+    transition: all 0.3s;
 }
 
 .main-nav-link:hover,
 .main-nav-link:active {
-	color: #e67e22;
+    color: #e67e22;
 }
 
 .main-nav-link.nav-cta:link,
 .main-nav-link.nav-cta:visited {
-	background-color: #e67e22;
-	color: #fff;
-	padding: 1.2rem 2.4rem;
-	border-radius: 9px;
+    background-color: #e67e22;
+    color: #fff;
+    padding: 1.2rem 2.4rem;
+    border-radius: 9px;
 }
 
 .main-nav-link.nav-cta:hover,
 .main-nav-link.nav-cta:active {
-	background-color: #cf711f;
+    background-color: #cf711f;
 }
 
 /* ********** */
@@ -58,61 +58,61 @@
 /* ********** */
 
 .section-hero {
-	background-color: #fdf2e9;
-	padding: 9.6rem 0;
+    background-color: #fdf2e9;
+    padding: 9.6rem 0;
 }
 
 .hero {
-	max-width: 130rem;
-	margin: 0 auto;
-	padding: 0 3.2rem;
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	gap: 9.6rem;
-	align-items: center;
+    max-width: 130rem;
+    margin: 0 auto;
+    padding: 0 3.2rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 9.6rem;
+    align-items: center;
 }
 
 .hero-description {
-	font-size: 2rem;
-	line-height: 1.4;
-	margin-bottom: 4.8rem;
+    font-size: 2rem;
+    line-height: 1.4;
+    margin-bottom: 4.8rem;
 }
 
 .delivered-meals {
-	display: flex;
-	align-items: center;
-	gap: 1.6rem;
-	margin-top: 8rem;
+    display: flex;
+    align-items: center;
+    gap: 1.6rem;
+    margin-top: 8rem;
 }
 
 .delivered-imgs {
-	display: flex;
+    display: flex;
 }
 
 .delivered-imgs img {
-	width: 4.8rem;
-	height: 4.8rem;
-	border-radius: 50%;
-	margin-right: -1.6rem;
-	border: 3px solid #fff;
+    width: 4.8rem;
+    height: 4.8rem;
+    border-radius: 50%;
+    margin-right: -1.6rem;
+    border: 3px solid #fff;
 }
 
 .delivered-imgs img:last-child {
-	margin-right: 0;
+    margin-right: 0;
 }
 
 .delivered-text {
-	font-size: 1.8rem;
-	font-weight: 500;
+    font-size: 1.8rem;
+    font-weight: 500;
 }
 
 .delivered-text span {
-	color: #cf711f;
-	font-weight: 700;
+    color: #cf711f;
+    font-weight: 700;
 }
 
 .hero-img-box img {
-	width: 100%;
+    width: 100%;
 }
 
 /* ******************* */
@@ -120,55 +120,55 @@
 /* ******************* */
 
 .section-how {
-	padding: 9.6rem;	
+    padding: 9.6rem;
 }
 
 .step-number {
-	font-size: 8.6rem;
-	font-weight: 600;
-	color: #ddd;
-	margin-bottom: 1.6rem;
+    font-size: 8.6rem;
+    font-weight: 600;
+    color: #ddd;
+    margin-bottom: 1.6rem;
 }
 
 .step-description {
-	font-size: 1.8rem;
-	line-height: 1.8;
+    font-size: 1.8rem;
+    line-height: 1.8;
 }
 
 .step-img-box {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
 }
 
 .step-img-box::before,
 .step-img-box::after {
-	content: "";
-	display: block;
-	border-radius: 50%;
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
+    content: "";
+    display: block;
+    border-radius: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .step-img-box::before {
-	width: 60%;
-	padding-bottom: 60%;
-	background-color: #fdf2e9;
-	z-index: -2;
+    width: 60%;
+    padding-bottom: 60%;
+    background-color: #fdf2e9;
+    z-index: -2;
 }
 
 .step-img-box::after {
-	width: 45%;
-	padding-bottom: 45%;
-	background-color: #fae5d3;
-	z-index: -1;
+    width: 45%;
+    padding-bottom: 45%;
+    background-color: #fae5d3;
+    z-index: -1;
 }
 
 .step-img {
-	width: 35%;
+    width: 35%;
 }
 
 /* ************ */
@@ -176,29 +176,29 @@
 /* ************ */
 
 .section-featured {
-	padding: 4.8rem 0;
+    padding: 4.8rem 0;
 }
 
 .heading-featured-in {
-	text-align: center;
-	font-size: 1.6rem;
-	text-transform: uppercase;
-	color: #888;
-	letter-spacing: 1.5px;
-	margin-bottom: 2.4rem;
+    text-align: center;
+    font-size: 1.6rem;
+    text-transform: uppercase;
+    color: #888;
+    letter-spacing: 1.5px;
+    margin-bottom: 2.4rem;
 }
 
 .logos {
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-	gap: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 2rem;
 }
 
 .logos img {
-	height: 3.2rem;
-	filter: brightness(0);
-	opacity: 0.5;
+    height: 3.2rem;
+    filter: brightness(0);
+    opacity: 0.5;
 }
 
 /* ************ */
@@ -206,44 +206,44 @@
 /* ************ */
 
 .meals {
-	padding: 9.6rem 0;
+    padding: 9.6rem 0;
 }
 
 .meal {
-	box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
-	border-radius: 11px;
-	overflow: hidden;
-	transition: all 0.4s;
+    box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.075);
+    border-radius: 11px;
+    overflow: hidden;
+    transition: all 0.4s;
 }
 
 .meal:hover {
-	transform: translateY(-2rem);
-	box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
+    transform: translateY(-2rem);
+    box-shadow: 0 3.2rem 6.4rem rgba(0, 0, 0, 0.06);
 }
 
 .meal-img {
-	width: 100%;
+    width: 100%;
 }
 
 .meal-content {
-	padding: 3.2rem 4.8rem 4.8rem 4.8rem;
+    padding: 3.2rem 4.8rem 4.8rem 4.8rem;
 }
 
 .meal-tags {
-	display: flex;
-	align-items: center;
-	gap: 0.6rem;
-	margin-bottom: 1rem;
+    display: flex;
+    align-items: center;
+    gap: 0.6rem;
+    margin-bottom: 1rem;
 }
 
 .tag {
-	display: inline-block;
-	font-size: 1.2rem;
-	font-weight: 500;
-	text-transform: uppercase;
-	background-color: aquamarine;
-	padding: 0.4rem 0.8rem;
-	border-radius: 100px;
+    display: inline-block;
+    font-size: 1.2rem;
+    font-weight: 500;
+    text-transform: uppercase;
+    background-color: aquamarine;
+    padding: 0.4rem 0.8rem;
+    border-radius: 100px;
 }
 
 .tag--vegetarian {
@@ -259,54 +259,54 @@
 }
 
 .meal-title {
-	font-size: 2rem;
-	font-weight: 600;
-	color: #333;
-	margin-bottom: 2.4rem;
+    font-size: 2rem;
+    font-weight: 600;
+    color: #333;
+    margin-bottom: 2.4rem;
 }
 
 .meal-attributes {
-	list-style: none;
-	display: flex;
-	flex-direction: column;
-	gap: 2rem;
+    list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
 }
 
 .meal-attribute {
-	font-size: 1.8rem;
-	display: flex;
-	align-items: center;
-	gap: 1.2rem;
+    font-size: 1.8rem;
+    display: flex;
+    align-items: center;
+    gap: 1.2rem;
 }
 
 .meal-icon {
-	height: 2.4rem;
-	width: 2.4rem;
-	color: #e67e22;
+    height: 2.4rem;
+    width: 2.4rem;
+    color: #e67e22;
 }
 
 .list {
-	display: flex;
-	flex-direction: column;
-	gap: 1.6rem;
-	list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+    list-style: none;
 }
 
 .list-item {
-	display: flex;
-	align-items: center;
-	gap: 1.2rem;
-	font-size: 1.8rem;
+    display: flex;
+    align-items: center;
+    gap: 1.2rem;
+    font-size: 1.8rem;
 }
 
 .list-icon {
-	color: #e67e22;
-	height: 3rem;
-	width: 3rem;
+    color: #e67e22;
+    height: 3rem;
+    width: 3rem;
 }
 
 .all-recipes {
-	text-align: center;
+    text-align: center;
 }
 
 /* ************ */
@@ -314,59 +314,59 @@
 /* ************ */
 
 .section-testimonials {
-	background-color: #fdf2e9;
-	display: grid;
-	grid-template-columns: 55fr 45fr;
-	align-items: center;
+    background-color: #fdf2e9;
+    display: grid;
+    grid-template-columns: 55fr 45fr;
+    align-items: center;
 }
 
 .testimonials-container {
-	padding: 9.6rem;
+    padding: 9.6rem;
 }
 
 .testimonials {
-	display: grid;
-	grid-template-columns: 1fr 1fr;
-	row-gap: 4.8rem;
-	column-gap: 8rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 4.8rem;
+    column-gap: 8rem;
 }
 
 .testimonial-img {
-	width: 6.4rem;
-	border-radius: 50%;
-	margin-bottom: 1.2rem;
+    width: 6.4rem;
+    border-radius: 50%;
+    margin-bottom: 1.2rem;
 }
 
 .testimonial-text {
-	font-size: 1.8rem;
-	line-height: 1.8;
-	margin-bottom: 1.6rem;
+    font-size: 1.8rem;
+    line-height: 1.8;
+    margin-bottom: 1.6rem;
 }
 
 .testimonial-name {
-	font-size: 1.6rem;
-	color: #6f6f6f;
+    font-size: 1.6rem;
+    color: #6f6f6f;
 }
 
 .gallery {
-	display: grid;
-	grid-template-columns: repeat(3, 1fr);
-	gap: 1.6rem;
-	padding: 1.6rem;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 1.6rem;
+    padding: 1.6rem;
 }
 
 .gallery-item {
-	overflow: hidden;
+    overflow: hidden;
 }
 
 .gallery img {
-	width: 100%;
-	display: block;
-	transition: all 0.4s;
+    width: 100%;
+    display: block;
+    transition: all 0.4s;
 }
 
 .gallery img:hover {
-	transform: scale(1.2);
+    transform: scale(1.2);
 }
 
 /* ************ */
@@ -374,103 +374,184 @@
 /* ************ */
 
 .section-pricing {
-	padding: 9.6rem 0;
+    padding: 9.6rem 0;
 }
 
 .pricing-plans {
-	width: 75%;
-	padding: 4.6rem;
-	border-radius: 11px;
+    width: 75%;
+    padding: 4.6rem;
+    border-radius: 11px;
 }
 
 .pricing-plan--starter {
-	justify-self: end;
-	border: 1px solid #fdf2e9;
+    justify-self: end;
+    border: 1px solid #fdf2e9;
 }
 
 .pricing-plan--complete {
-	background-color: #fdf2e9;
-	position: relative;
-	overflow: hidden;
+    background-color: #fdf2e9;
+    position: relative;
+    overflow: hidden;
 }
 
 .pricing-plan--complete::after {
-	content: "Best Value";
-	position: absolute;
-	top: 5%;
-	right: -8%;
-	text-transform: uppercase;
-	font-size: 1.4rem;
-	font-weight: 700;
-	background-color: #ffd43b;
-	padding: 0.8rem 3.2rem;
-	transform: rotate(45deg);
+    content: "Best Value";
+    position: absolute;
+    top: 5%;
+    right: -8%;
+    text-transform: uppercase;
+    font-size: 1.4rem;
+    font-weight: 700;
+    background-color: #ffd43b;
+    padding: 0.8rem 3.2rem;
+    transform: rotate(45deg);
 }
 
 .plan-header {
-	text-align: center;
-	margin-bottom: 4.8rem;
+    text-align: center;
+    margin-bottom: 4.8rem;
 }
 
 .plan-name {
-	font-size: 2rem;
-	font-weight: 600;
-	color: #cf711f;
-	letter-spacing: 0.75;
-	text-transform: uppercase;
-	margin-bottom: 3.2rem;
+    font-size: 2rem;
+    font-weight: 600;
+    color: #cf711f;
+    letter-spacing: 0.75;
+    text-transform: uppercase;
+    margin-bottom: 3.2rem;
 }
 
 .plan-price {
-	font-size: 6.2rem;
-	font-weight: 600;
-	color: #333;
-	margin-bottom: 1.6rem;
+    font-size: 6.2rem;
+    font-weight: 600;
+    color: #333;
+    margin-bottom: 1.6rem;
 }
 
 .plan-price span {
-	font-size: 3rem;
-	font-weight: 500;
-	margin-right: 0.8rem;
+    font-size: 3rem;
+    font-weight: 500;
+    margin-right: 0.8rem;
 }
 
 .plan-text {
-	font-size: 1.6rem;
-	color: #6f6f6f;
+    font-size: 1.6rem;
+    color: #6f6f6f;
 }
 
 .list {
-	margin-bottom: 4.8rem;
+    margin-bottom: 4.8rem;
 }
 
 .plan-signup {
-	text-align: center;
+    text-align: center;
 }
 
 .plan-details {
-	font-size: 1.6rem;
-	text-align: center;
-	color: #6f6f6f;
+    font-size: 1.6rem;
+    text-align: center;
+    color: #6f6f6f;
 }
 
 .feature-icon {
-	height: 3.2rem;
-	width: 3.2rem;
-	color: #e67e22;
-	background-color: #fdf2e9;
-	padding: 1.6rem;
-	border-radius: 50%;
-	margin-bottom: 3.2rem;
+    height: 3.2rem;
+    width: 3.2rem;
+    color: #e67e22;
+    background-color: #fdf2e9;
+    padding: 1.6rem;
+    border-radius: 50%;
+    margin-bottom: 3.2rem;
 }
 
 .feature-title {
-	font-size: 2.4rem;
-	font-weight: 700;
-	color: #333;
-	margin-bottom: 1.6rem;
+    font-size: 2.4rem;
+    font-weight: 700;
+    color: #333;
+    margin-bottom: 1.6rem;
 }
 
 .feature-text {
-	font-size: 1.8rem;
-	line-height: 1.8;
+    font-size: 1.8rem;
+    line-height: 1.8;
+}
+
+/* ************ */
+/* CTA          */
+/* ************ */
+
+.section-cta {
+    padding: 4.8rem 0 9.6rem 0;
+}
+
+.cta {
+    display: grid;
+    grid-template-columns: 2fr 1fr;
+    background-color: #e67e22;
+    box-shadow: 0 2.4rem 4.8rem rgba(0, 0, 0, 0.15);
+    border-radius: 11px;
+    overflow: hidden;
+    background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
+}
+
+.cta *:focus {
+	outline: none;
+	box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
+}
+
+.cta-text-box {
+    padding: 4.8rem 6.4rem 6.4rem 6.4rem;
+    color: #45260a;
+}
+
+.cta-text-box .heading-secondary {
+    color: #45260a;
+    margin-bottom: 3.2rem;
+}
+
+.cta-text {
+    font-size: 1.8rem;
+    line-height: 1.8;
+    margin-bottom: 4.8rem;
+}
+
+.cta-form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 3.2rem;
+    row-gap: 2.4rem;
+}
+
+.cta-form label {
+    display: block;
+    font-size: 1.6rem;
+    font-weight: 500;
+    margin-bottom: 1.2rem;
+}
+
+.cta-form input,
+.cta-form select {
+    width: 100%;
+    padding: 1.2rem;
+    border: none;
+    border-radius: 9px;
+    color: inherit;
+    font-size: 1.8rem;
+    font-family: inherit;
+    background-color: #fdf2e9;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.cta-form input::placeholder {
+    color: #aaa;
+}
+
+.cta-img-box {
+    background-image: linear-gradient(
+            to right bottom,
+            rgba(235, 151, 78, 0.35),
+            rgba(230, 125, 34, 0.35)
+        ),
+        url("../img/eating.jpg");
+    background-size: cover;
+    background-position: center;
 }
