--- a/07-Omnifood_v5/css/general.css
+++ b/07-Omnifood_v5/css/general.css
@@ -91,16 +91,21 @@ strong {
 	margin-bottom: 2.4rem;
 }
 
+.btn,
 .btn:link,
 .btn:visited {
     display: inline-block;
     text-decoration: none;
     padding: 1.6rem 3.2rem;
     font-size: 2rem;
-    font-weight: 500;
+    font-weight: 600;
     border-radius: 9px;
 
-    transition: background-color 0.3s;
+    transition: all 0.3s;
+
+	/* only for button */
+	border: none;
+	font-family: inherit;
 }
 
 .btn--full:link,
@@ -124,6 +129,19 @@ strong {
 .btn--outline:active {
     background-color: #fdf2e9;
     box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn--form {
+	align-self: end;
+	background-color: #45260a;
+	color: #fdf2e9;
+	padding: 1.2rem;
+}
+
+.btn--form:hover {
+	background-color: #fff;
+	color: #555;
+	cursor: pointer;
 }
 
 .link:link,
