--- a/07-Omnifood_v6/css/general.css
+++ b/07-Omnifood_v6/css/general.css
@@ -88,6 +88,10 @@ body {
 	column-gap: 6.4rem;
 }
 
+.grid:not(:last-child) {
+	margin-bottom: 9.6rem;
+}
+
 .grid--center-v {
 	align-items: center;
 }
@@ -181,7 +185,7 @@ body {
 .link:link,
 .link:visited {
 	display: inline-block;
-	font-size: 1.6rem;
+	font-size: 1.8rem;
 	color: #e67e22;
 	text-decoration: none;
 	border-bottom: 1px solid currentColor;
