--- a/07-Omnifood_v6/css/general.css
+++ b/07-Omnifood_v6/css/general.css
@@ -148,6 +148,7 @@ body {
 	letter-spacing: 0.75px;
 }
 
+.btn,
 .btn:link,
 .btn:visited {
 	display: inline-block;
@@ -156,6 +157,12 @@ body {
 	font-weight: 600;
 	padding: 1.6rem 3.2rem;
 	border-radius: 9px;
+
+	/* only for button element */
+	border: none;
+	cursor: pointer;
+	font-family: inherit;
+
 	transition: all 0.3s;
 }
 
@@ -180,6 +187,18 @@ body {
 .btn--outline:active {
 	background-color: #fdf2e9;
 	box-shadow: inset 0 0 0 3px #fff;
+}
+
+.btn--form {
+	background-color: #45260a;
+	color: #fdf2e9;
+	align-self: end;
+	padding: 1.2rem;
+}
+
+.btn--form:hover {
+	background-color: #fff;
+	color: #555;
 }
 
 .link:link,
