--- a/07-Omnifood_v6/css/style.css
+++ b/07-Omnifood_v6/css/style.css
@@ -458,7 +458,7 @@
 /* ******************* */
 
 .section-cta {
-    padding: 4.8rem 0;
+    padding: 4.8rem 0 12.8rem 0;
 }
 
 .cta {
@@ -527,4 +527,68 @@
         url("/img/eating.jpg");
     background-size: cover;
     background-position: center;
+}
+
+/* ******************* */
+/* FOOTER              */
+/* ******************* */
+
+.footer {
+	padding: 12.8rem 0;
+	border-top: 1px solid #eee;
+}
+
+.grid--footer {
+	grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+}
+
+.logo-col {
+	display: flex;
+	flex-direction: column;
+}
+
+.footer-logo {
+	display: block;
+	margin-bottom: 3.2rem;
+}
+
+.social-links {
+	list-style: none;
+	display: flex;
+	column-gap: 2rem;
+}
+
+.social-icon {
+	height: 2.4rem;
+	width: 2.4rem;
+}
+
+.copyright {
+	margin-top: auto;
+	font-size: 1.4rem;
+	line-height: 1.6;
+	color: #767676;
+}
+
+.footer-heading {
+	font-size: 1.8rem;
+	font-weight: 500;
+	margin-bottom: 4rem;
+}
+
+.contacts {
+	font-style: normal;
+	font-size: 1.6rem;
+	line-height: 1.6;
+}
+
+.address {
+	margin-bottom: 2.4rem;
+}
+
+.footer-nav {
+	list-style: none;
+	display: flex;
+	flex-direction: column;
+	row-gap: 2.4rem;
 }
