--- a/07-Omnifood_v8/css/general.css
+++ b/07-Omnifood_v8/css/general.css
@@ -73,6 +73,10 @@ body {
 /* REUSABLE COMPONENTS 	 */
 /* ********************* */
 
+strong {
+	font-weight: 500;
+}
+
 .container {
 	max-width: 120rem;
 	margin: 0 auto;
@@ -168,6 +172,25 @@ body {
 	box-shadow: inset 0 0 0 3px #fff;
 }
 
+.link:link,
+.link:visited {
+	text-decoration: none;
+	font-size: 2rem;
+	color: #e67e22;
+	border-bottom: 1px solid #e67e22;
+	padding-bottom: 0.3rem;
+	transition: all 0.3s;
+}
+
+.link:hover,
+.link:active {
+	border-bottom: 1px solid transparent;
+}
+
 .margin-right-sm {
 	margin-right: 1.8rem;
+}
+
+.center-text {
+	text-align: center;
 }
