--- a/07-Omnifood_v8/css/general.css
+++ b/07-Omnifood_v8/css/general.css
@@ -89,6 +89,10 @@ strong {
 	column-gap: 6.4rem;
 }
 
+.grid:not(:last-child) {
+	margin-bottom: 9.6rem;
+}
+
 .grid--2-cols {
 	grid-template-columns: repeat(2, 1fr);
 }
@@ -188,9 +192,34 @@ strong {
 }
 
 .margin-right-sm {
-	margin-right: 1.8rem;
+	margin-right: 1.8rem !important;
+}
+
+.margin-bottom-md {
+	margin-bottom: 4.8rem !important;
 }
 
 .center-text {
 	text-align: center;
+}
+
+.feature-icon {
+	height: 3.2rem;
+	width: 3.2rem;
+	padding: 1.8rem;
+	color: #e67e22;
+	background-color: #fdf2e9;
+	border-radius: 50%;
+	margin-bottom: 3.2rem;
+}
+
+.feature-title {
+	font-size: 2.4rem;
+	font-weight: 700;
+	margin-bottom: 1.8rem;
+}
+
+.feature-text {
+	font-size: 1.8rem;
+	line-height: 1.8;
 }
